--- a/related_artist_clustering.ipynb
+++ b/related_artist_clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,13 +13,38 @@
      "text": [
       "Tracks fetched\n",
       "0/3781 tracks processed\n",
+      "retrying ...2secs\n",
+      "retrying ...1secs\n",
+      "retrying ...1secs\n",
+      "retrying ...1secs\n",
       "500/3781 tracks processed\n",
+      "retrying ...1secs\n",
+      "retrying ...1secs\n",
+      "retrying ...1secs\n",
       "1000/3781 tracks processed\n",
+      "retrying ...1secs\n",
+      "retrying ...1secs\n",
+      "retrying ...1secs\n",
       "1500/3781 tracks processed\n",
+      "retrying ...2secs\n",
+      "retrying ...1secs\n",
+      "retrying ...1secs\n",
+      "retrying ...1secs\n",
       "2000/3781 tracks processed\n",
+      "retrying ...1secs\n",
+      "retrying ...1secs\n",
+      "retrying ...2secs\n",
+      "retrying ...1secs\n",
       "2500/3781 tracks processed\n",
+      "retrying ...1secs\n",
+      "retrying ...1secs\n",
       "3000/3781 tracks processed\n",
+      "retrying ...1secs\n",
+      "retrying ...2secs\n",
+      "retrying ...1secs\n",
       "3500/3781 tracks processed\n",
+      "retrying ...1secs\n",
+      "retrying ...1secs\n",
       "Artists fetched\n"
      ]
     }
@@ -48,6 +73,7 @@
     "        tracks += track_set\n",
     "    else:\n",
     "        break\n",
+    "\n",
     "    offset += 50\n",
     "print(\"Tracks fetched\")\n",
     "\n",
@@ -73,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -105,17 +131,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0:08:51.385593\n",
+      "0:08:30.749811\n",
+      "0:18:31.135313\n",
+      "0:08:56.980165\n"
+     ]
+    },
+    {
+     "ename": "NetworkXError",
+     "evalue": "Graph is not weighted.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNetworkXError\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-967693ef7f29>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[0mstart\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m \u001b[0mdistance\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjohnson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mG\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     26\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mstart\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\python36\\lib\\site-packages\\networkx\\algorithms\\shortest_paths\\weighted.py\u001b[0m in \u001b[0;36mjohnson\u001b[1;34m(G, weight)\u001b[0m\n\u001b[0;32m   2094\u001b[0m     \"\"\"\n\u001b[0;32m   2095\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mnx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mis_weighted\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mG\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mweight\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2096\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mnx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mNetworkXError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Graph is not weighted.'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2097\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2098\u001b[0m     \u001b[0mdist\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[0mv\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;36m0\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mv\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mG\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNetworkXError\u001b[0m: Graph is not weighted."
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn import preprocessing\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "from datetime import datetime\n",
     "\n",
-    "distance = nx.all_pairs_shortest_path_length(G)\n",
+    "start = datetime.now()\n",
+    "distance = list(nx.all_pairs_shortest_path_length(G))\n",
+    "print(datetime.now() - start)\n",
+    "\n",
+    "start = datetime.now()\n",
+    "distance = list(nx.shortest_path_length(G))\n",
+    "print(datetime.now() - start)\n",
+    "\n",
+    "start = datetime.now()\n",
+    "distance = list(nx.all_pairs_bellman_ford_path_length(G))\n",
+    "print(datetime.now() - start)\n",
+    "\n",
+    "start = datetime.now()\n",
+    "distance = list(nx.all_pairs_dijkstra_path_length(G))\n",
+    "print(datetime.now() - start)\n",
+    "\n",
     "# distance = nx.floyd_warshall_numpy(G)\n",
     "# similarity = np.exp(-distance / distance.std())"
    ]
@@ -388,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
